# qube-system-diagnostics

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_PROJECT.md  Cargo.toml  HUMAN_CHANGELOG.md  LICENSE.md  README.md  SD300-Project-Plan.md  build.rs
.claude/: settings.json
.github/workflows/: ci.yml  linux-native-gui.yml  macos-installer.yml  release-qualify.yml  release.yml  windows-installers.yml
.tasks/: .board-version.json  .gitignore  CLAUDE.md  MILESTONES.md  TASKS.md  board-config.js  board-server.mjs  config.json  dashboard.html
.tasks/memory/: glossary.md
.tasks/memory/projects/: sd300-v3.md
.tasks/milestones/: v20.md  v3n.md
.tasks/tasks/: acc.md  cpl.md  ctt.md  dpx.md  dth.md  ext.md  ga2.md  giu.md  gux.md  hrd.md  lnx.md  mac.md  mkl.md  n7k.md  nsp.md  obs.md  pkg.md  qv3.md  rel.md  rlx.md  sok.md  unx.md  upd.md  web.md  wix.md  wqa.md
docs/adr/: 0001-soak-early-exit-attribution.md  0002-warmed-scroll-latency-root-cause.md  0003-managed-uninstall-receipt-parent-cleanup.md  0004-v3-release-scope-decisions.md  0005-in-app-update-coordinator.md  README.md
docs/agents/: 2026-07-22-codex-loop-post-mortem.md
docs/agents/handoff/: 2026-07-21-001-sd300-v3-native-gui-ci-performance.md  2026-07-22-002-sd300-v3-fable-changelog-and-closure.md
docs/research/: 2026-07-17-macos-hardware-monitor-capability-report.md
docs/thinking/: 2026-07-17-macos-hardware-monitor-inquiry.md  2026-07-20-native-gui-distribution.md  2026-07-20-native-gui-process-model.md  2026-07-21-native-gui-information-architecture.md  2026-07-21-native-gui-local-release-gate.md
gui/: README.md  app.zon  build.zig  build.zig.zon  package-lock.json  package.json  toolchain-lock.json
gui-engine/: Cargo.toml
gui-engine/examples/: measure_fast_collection.rs
gui-engine/src/: lib.rs
gui/assets/fonts/: README.md
gui/patches/: native-sdk-0.5.4-software-render.patch
gui/platform/linux/: app.zon
gui/platform/windows/: app-icon.rc
gui/src/: app.native  engine.zig  main.zig  projection.zig  settings.zig  tests.zig
gui/src/platform/: lifecycle_unix.c  window_visibility.zig  window_visibility_linux.c  window_visibility_macos.m
gui/tools/: export_icons.zig
inno/: corporate.iss  global.iss  remove-conflicting-msi.pas
scripts/: build-native-gui-musl-container.sh  build-native-gui.ps1  build-native-gui.sh  build-sign-notarize-macos-installer.sh  check-native-distribution.mjs  check-native-distribution.ps1  check-product-version-consistency.mjs  generate-linux-runtime-sbom.mjs  measure-native-gui-performance.ps1  package-native-gui-linux.sh  package-native-gui.ps1  prepare-makira-font.mjs  prepare-native-sdk.mjs  prepare-native-sdk.ps1  test-native-gui.mjs  validate-native-gui-linux-package.sh  validate-windows-installers.ps1  validate-windows-self-update.ps1  verify-apple-installer-identity.sh  write-gui-install-manifest.mjs
scripts/compat-installers/: tr300-tui-installer.ps1  tr300-tui-installer.sh
scripts/managed-installers/: sd300-installer.ps1  sd300-installer.sh
src/: app.rs  cli.rs  error.rs  gui.rs  history.rs  lib.rs  main.rs  migrate.rs  observation.rs  report.rs  settings.rs  types.rs  update.rs
src/collectors/: command.rs  cpu.rs  disk.rs  disk_health.rs  display.rs  drivers.rs  gpu.rs  memory.rs  mod.rs  network.rs  network_diag.rs  processes.rs  processes_windows.rs  system_info.rs  thermals.rs
src/collectors/drivers/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/collectors/platform/: mod.rs
src/ui/: bottom_bar.rs  common.rs  header_bar.rs  help_overlay.rs  mod.rs  mode_select.rs
src/ui/sections/: cpu.rs  disk.rs  drivers.rs  gpu.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs  thermals.rs
tests/: cli_compat.rs
tests/fixtures/v2.0.6/: capability-ids.json  cli-contract.txt  help.stdout  lifecycle-result.json  provenance.json  report-contract.json  short-help.stdout  version.stdout
tests/fixtures/v2.0.6/errors/: mode-conflict.stderr  sensitive-requires-json.stderr  subcommand-mode-conflict.stderr  unknown-subcommand.stderr
wix/: main.wxs
wix-corporate/: corporate.wxs
