[package]
name = "tr300-tui"
version = "2.0.1"
edition = "2021"
rust-version = "1.95"
authors = ["Emmett S <hey@emmetts.dev>"]
description = "Real-time interactive system diagnostic TUI"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/QubeTX/qube-system-diagnostics"
keywords = ["cli", "system", "diagnostics", "tui", "cross-platform"]
categories = ["command-line-utilities"]
include = [
    "/src/**",
    "/wix/main.wxs",
    "/wix-corporate/corporate.wxs",
    "/inno/**",
    "/scripts/**",
    "/build.rs",
    "/Cargo.lock",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE.md",
    "/README.md",
    "/rust-toolchain.toml",
]

[package.metadata.wix]
upgrade-guid = "A7C3E1D4-9F8B-4E2A-B6D1-3F5C8A0E7B94"
path-guid = "D4E8F2A1-6B3C-4D9E-A5F7-1C8B2E0D6A43"
license = false
eula = false

[[bin]]
name = "sd300"
path = "src/main.rs"

[lib]
name = "sd_300"
path = "src/lib.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
sysinfo = "0.39"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
futures = "0.3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
winreg = "0.52"
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "handleapi",
    "processthreadsapi",
    "shellapi",
    "synchapi",
    "winbase",
    "wincon",
    "winuser",
] }
windows = { version = "0.62", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# Release workflow and MSI product naming are intentionally customized: CI
# deploys from main after checking release/crate state, and the MSI keeps the
# SD-300/sd300 product name even though the crates.io package is tr300-tui.
allow-dirty = ["ci", "msi"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to publish prereleases to package managers
publish-prereleases = false
