[package]
name = "sd300-engine"
version = "3.1.2"
edition = "2021"
rust-version = "1.95"
publish = false
license = "PolyForm-Noncommercial-1.0.0"

[lib]
name = "sd300_engine"
crate-type = ["cdylib"]

[dependencies]
sd_300 = { package = "tr300-tui", path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
sysinfo = "0.39.1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
